osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_invalid_annotation[str [or] str [or] None].txt
error: `Optional` must have one or two arguments
--> main.sml:1:5
     |
   1 | Foo: str | str | None = JsonData(path='$.foo')
     |      ^ got 3 arguments